Change plot1 to Plot1

--- a/plot1.html
+++ b/plot1.html
@@ -3,7 +3,7 @@
 <body>
 
 <figure>
-  <img src="plot1.jpg" alt="The Pulpit Rock" width="1500" height="750">
+  <img src="Plot1.jpg" alt="The Pulpit Rock" width="1500" height="750">
 </figure>
 
 </body>
